@@ -12,6 +12,8 @@ update-manager (1:0.131.3) UNRELEASED; urgency=low
   * check-new-release:
     - use exit codes if run with --quiet otherwise only print
       (LP: #494499)
+  * DistUpgrade/DistUpgradeConfigParser.py:
+    - fix crash in _interpolate (LP: #500705)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Dec 2009 12:47:55 +0100
 
